--- a/staticpage_3591_6684.html
+++ b/staticpage_3591_6684.html
@@ -68,9 +68,9 @@ img {
 
   <!-- Header Starts Here -->
 
-  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
+  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>32 Iconic London Tourist Sites</h1>
+    <h1>Benjamin Franklin House</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -80,20 +80,13 @@ img {
 
   
 
-  <div class="staticPageList">
-<ul data-role="listview" >
-	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_3591_6684.html">
-                                	<img src="http://app-gorilla.com/members/wizard/mediafiles/twp2biz_178/thumb/twp2biz_1395294923_256x256.jpg" class="ui-li-thumb">
-                                <h2>
-                Benjamin Franklin House                </h2>
-                <p>dfghd ghhh yj.</p>
-                
-            </a></li>
-	
-	
-</ul>
-</div>
+  <div class="staticPage">
 
+  
+
+  dfghd ghhh yj.
+
+  </div>
 
   
 
