--- a/index.html
+++ b/index.html
@@ -109,6 +109,28 @@ img {
 			
 		</div>
 	</div>
+		<div class="white_wrap">
+		<div class="app_feature_list">
+
+						
+				<table cellpadding="0" cellspacing="0" border="0" align="center">
+					<tr>
+						<td>
+						
+							<a class="item link" rel="external" data-ajax="flase" href="staticpage_3593.html">
+																	<img src="icon(2).png" />
+															</a>
+						</td>
+						<td>
+							<a href="staticpage_3593.html" rel="external" data-ajax="flase" >
+								<label>London Museums</label>
+							</a>
+						</td>
+					</tr>
+				</table>
+			
+		</div>
+	</div>
 	</div>
 
 
