twp2biz_32IconicLondonTouristSites_656

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ img {
 						</td>
 						<td>
 							<a href="staticpage_3592.html" rel="external" data-ajax="flase" >
-								<label>London Landmarks</label>
+								<label>London Zoos and Aquariums</label>
 							</a>
 						</td>
 					</tr>
